--- a/approval-service/build.gradle
+++ b/approval-service/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     // 자바 언어를 통해 smtp 통신을 할 수 있게 하는 라이브러리
     implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
 
+    // feign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
 }
 
 dependencyManagement {
