--- a/hr-service/src/main/resources/bootstrap.yml
+++ b/hr-service/src/main/resources/bootstrap.yml
@@ -6,4 +6,4 @@ spring:
     config:
       uri: http://localhost:8888
 #      uri: http://config-service.default.svc.cluster.local:8888
-      profile: dev # 공통 application.yml 읽어오겠다=======
+      profile: default # 공통 application.yml 읽어오겠다=======
