--- a/approval-service/build.gradle
+++ b/approval-service/build.gradle
@@ -68,6 +68,9 @@ dependencies {
     // feign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
+    // Swagger/OpenAPI 추가
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
 }
 
 dependencyManagement {
