--- a/notice-service/build.gradle
+++ b/notice-service/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     implementation 'com.querydsl:querydsl-jpa'
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    // Swagger/OpenAPI 추가
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 }
 
 dependencyManagement {
