--- a/hr-service/build.gradle
+++ b/hr-service/build.gradle
@@ -28,6 +28,8 @@ ext {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-lang3:3.18.0' // 또는 최신 버전
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
