YHJ- 이달의 사원 수정(4차) - 선생님께서 수정해주신 yml 설정

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -38,7 +38,8 @@ spring:
           uri: lb://NOTICE
           #          uri: http://user-service.default.svc.cluster.local:8081
           predicates:
-            - Path=/notice/**
+            - Path=
+            - /notice/**
           filters:
             - AuthorizationHeaderFilter
 
