--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -75,6 +75,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          envs: ECR_REGISTRY,AWS_REGION
           script: |
             aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
             docker stop ${{ matrix.service }} || true
@@ -180,6 +181,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          envs: ECR_REGISTRY,AWS_REGION
           script: |
             aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REGISTRY
             docker stop ${{ matrix.service }} || true
