커뮤니티와 공지글 나누기 일단 완료

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -42,6 +42,14 @@ spring:
           filters:
             - AuthorizationHeaderFilter
 
+        - id: community
+          uri: lb://NOTICE
+          #          uri: http://user-service.default.svc.cluster.local:8081
+          predicates:
+            - Path=/community/**
+          filters:
+            - AuthorizationHeaderFilter
+
         - id: approval
           uri: lb://APPROVAL
           #          uri: http://user-service.default.svc.cluster.local:8081
