--- a/hr-service/build.gradle
+++ b/hr-service/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     // Swagger/OpenAPI 추가
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 
+    //thumbnail 의존성
+    implementation 'net.coobird:thumbnailator:0.4.20'
+
 }
 
 dependencyManagement {
