--- a/notice-service/build.gradle
+++ b/notice-service/build.gradle
@@ -29,7 +29,7 @@ ext {
 
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.18.0' // 또는 최신 버전
-
+    implementation 'org.jsoup:jsoup:1.17.2' // 또는 최신 버전
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
