도커이미지용량줄이기시도

--- a/hr-service/Dockerfile
+++ b/hr-service/Dockerfile
@@ -1,15 +1,14 @@
-
-FROM openjdk:17-jdk-slim AS build
-
+# 1단계: Build
+FROM eclipse-temurin:17-jdk-jammy AS build
 WORKDIR /app
 COPY . .
-
 RUN chmod +x ./gradlew
 RUN ./gradlew clean build -x test
 
-FROM openjdk:17-jdk-slim
+# 2단계: 실행 (Distroless)
+FROM gcr.io/distroless/java17-debian11
 
+WORKDIR /app
 COPY --from=build /app/build/libs/*.jar app.jar
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
-
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
