--- a/hr-service/src/main/resources/application.yml
+++ b/hr-service/src/main/resources/application.yml
@@ -1,6 +1,18 @@
-
+#
 spring:
   application:
     name: hr
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.actuate.autoconfigure.metrics.SystemMetricsAutoConfiguration
+      - org.springframework.boot.actuate.autoconfigure.metrics.web.tomcat.TomcatMetricsAutoConfiguration
+p6spy:
+  config:
+    registermbeans: false
+
+weather:
+  api:
+    key: ZXtHl7IjyIssn%2BuPYkhLiyHlbIyxO1Zj89v0YwTWPGkSka2%2B%2Ft47TsClb%2F2z8sfd5pLYfRfGmyVC6aMM4UgrZg%3D%3D
+    base-url: http://apis.data.go.kr/1360000/VilageFcstInfoService_2.0
 #  profiles:
 #    active: local
